# hifi

./: CMakeLists.txt  hifi_android.py  hifi_vcpkg.py  prebuild.py
android/apps/viveFramePlayer/: CMakeLists.txt  build.gradle
android/apps/viveFramePlayer/src/main/: AndroidManifest.xml
android/apps/viveFramePlayer/src/main/assets/shader/fragment/: README  c_fragment.glsl  grid_fragment.glsl  skybox_fragment.glsl  sphere_fragment.glsl  t_fragment.glsl  ti_fragment.glsl  tt_fragment.glsl  tyuv_fragment.glsl
android/apps/viveFramePlayer/src/main/assets/shader/vertex/: README  light_vertex.glsl  skybox_multiview_vertex.glsl  skybox_vertex.glsl  sphere_vertex.glsl  tt_multiview_vertex.glsl  tt_vertex.glsl  v_vertex.glsl  vc_vertex.glsl  vcm_vertex.glsl  vcn_vertex.glsl  vn_vertex.glsl  vnt_vertex.glsl  vntm_vertex.glsl  vt_vertex.glsl  vtm_vertex.glsl  vtn_vertex.glsl  vtnm_vertex.glsl  (+1 more)
android/apps/viveFramePlayer/src/main/cpp/: Context.cpp  Context.h  RenderThread.h  hellovr.cpp  hellovr.h  jni.cpp  log.h
android/apps/viveFramePlayer/src/main/cpp/object/: FrameBufferObject.cpp  FrameBufferObject.h  Object.cpp  Object.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArrayObject.cpp  VertexArrayObject.h
android/apps/viveFramePlayer/src/main/cpp/scene/: ControllerAxes.cpp  ControllerAxes.h  ControllerCube.cpp  ControllerCube.h  Floor.cpp  Floor.h  Picture.cpp  Picture.h  RaySphereIntersection.h  ReticlePointer.cpp  ReticlePointer.h  SkyBox.cpp  SkyBox.h  Sphere.cpp  Sphere.h
android/apps/viveFramePlayer/src/main/cpp/shared/: Matrices.cpp  Matrices.h
(+34 files in other folders)
